Additional debugging information in case of crash during FCV change

XMLWordPrintableJSON

    • Fully Compatible
    • v5.0, v4.4, v4.2, v4.0
    • Sharding EMEA 2021-05-31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      While getting the collection and modified parts from a specific version, an invariant may fail unexpectedly. At the moment it is not clear the scenario that could lead to this failure, so it is considered necessary to instrument this part of the code in order to have more information for the analysis in case of reoccurrences.

            Assignee:
            Antonio Fuschetto
            Reporter:
            Antonio Fuschetto
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: