SERVER-57009 Additional debugging information in case of crash during FCV change