src/mongo/db/s/shard_server_catalog_cache_loader.cpp
@@ -1357,8 +1357,12 @@ void ShardServerCatalogCacheLoader::CollAndChunkTaskList::addTask(CollAndChunkTa
         return;
     }
 
+    const auto& lastTask = _tasks.back();
     if (task.dropped) {
-        invariant(_tasks.back().maxQueryVersion == task.minQueryVersion);
+        invariant(lastTask.maxQueryVersion == task.minQueryVersion,
+                  str::stream() << "The version of the added task is not contiguous with that of "
+                                << "the previous one: LastTask {" << lastTask.toString() << "}, "
+                                << "AddedTask {" << task.toString() << "}");
 
         // As an optimization, on collection drop, clear any pending tasks in order to prevent any
         // throw-away work from executing. Because we have no way to differentiate whether the
@@ -1372,8 +1376,11 @@ void ShardServerCatalogCacheLoader::CollAndChunkTaskList::addTask(CollAndChunkTa
         }
     } else {
         // Tasks must have contiguous versions, unless a complete reload occurs.
-        invariant(_tasks.back().maxQueryVersion == task.minQueryVersion ||
-                  !task.minQueryVersion.isSet());
+        invariant(lastTask.maxQueryVersion == task.minQueryVersion || !task.minQueryVersion.isSet(),
+                  str::stream() << "The added task is not the first and its version is not "
+                                << "contiguous with that of the previous one: LastTask {"
+                                << lastTask.toString() << "}, AddedTask {" << task.toString()
+                                << "}");
 
         _tasks.emplace_back(std::move(task));
     }
